--- a/app/src/main/res/xml/preferencias.xml
+++ b/app/src/main/res/xml/preferencias.xml
@@ -1,11 +1,28 @@
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/sync_header">
+    <PreferenceCategory>
 
         <SwitchPreferenceCompat
             app:key="sync"
-            app:title="@string/sync_title" />
+            app:summary="notificar si estamos cerca de un lugar"
+            app:title="@string/notificaciones" />
+
 
     </PreferenceCategory>
+    <EditTextPreference
+        android:defaultValue="12"
+        android:key="edit_text_preference_1"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:summary="Limita en número de valores que se muestra"
+        android:title="@string/editText" />
+    <ListPreference
+        android:defaultValue="1"
+        android:entries="@array/nombres"
+        android:entryValues="@array/numeros"
+        android:key="list_preference_1"
+        android:summary="Qué lugares quieres que aparezcab antes"
+        android:title="@string/criterios" />
 
 </PreferenceScreen>
