--- a/app/src/main/res/xml/preferencias.xml
+++ b/app/src/main/res/xml/preferencias.xml
@@ -1,24 +1,23 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory>
-
-        <SwitchPreferenceCompat
-            app:key="sync"
-            app:summary="notificar si estamos cerca de un lugar"
-            app:title="@string/notificaciones" />
+    <SwitchPreferenceCompat
+        app:key="sync"
+        app:summary="notificar si estamos cerca de un lugar"
+        app:title="@string/notificaciones" />
 
 
-    </PreferenceCategory>
     <EditTextPreference
         android:defaultValue="12"
+        android:inputType="number"
         android:key="edit_text_preference_1"
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:summary="Limita en número de valores que se muestra"
         android:title="@string/editText" />
+
     <ListPreference
-        android:defaultValue="1"
+        android:defaultValue="0"
         android:entries="@array/nombres"
         android:entryValues="@array/numeros"
         android:key="list_preference_1"
