--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,18 +4,20 @@
     tools:context="com.example.aplicacionscrollin.Presentacion.MainActivity">
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="5"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 
     <item android:title="Acerca de..."
         android:id="@+id/acercaDe"
         android:icon="@android:drawable/ic_menu_info_details"
-        android:orderInCategory="10" />
+        android:orderInCategory="10"
+        app:showAsAction="ifRoom|withText"/>
     <item android:title="Buscar"
         android:id="@+id/menu_buscar"
         android:icon="@android:drawable/ic_menu_search"
-        android:orderInCategory="115" />
+        android:orderInCategory="115"
+        app:showAsAction="always|collapseActionView"/>
 
 
 </menu>
