--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,9 +51,10 @@
         android:paddingTop="250dp">
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/MostrarLugares"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="MostrarLugares"
             android:text="@string/accion_mostrar" />
 
         <Button
